--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,6 @@ edition = "2021"
 
 [dependencies]
 apdu-dispatch = "0.1"
-ctaphid-dispatch = "0.1"
+ctaphid-dispatch = { git = "https://github.com/All-Your-Locks-Are-Belong-To-Us/ctaphid-dispatch" }
 iso7816 = "0.1"
 trussed = { git = "https://github.com/trussed-dev/trussed" }
